Styling for calculator

--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Calculator</title>
-  <link rel="stylesheet" type="text/css" href="mystyle.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
 <body>
     <div class="calculator">
+        <div class="previous-display">
+            <p>last calc here...</p>
+        </div>
         <div class="display">
             <p>numbers here...</p>
         </div>
         <div class="calculator-buttons">
             <button>(</button>
             <button>)</button>
-            <button>←</button>
+            <button class="double-button">←</button>
 
             <button>7</button>
             <button>8</button>
