Initial skeleton for js scripts

--- a/index.html
+++ b/index.html
@@ -5,41 +5,41 @@
     <title>Calculator</title>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
 </head>
 
 <body>
     <div class="calculator">
         <div class="previous-display">
-            <p>last calc here...</p>
+            <p id="prev-dispay"></p>
         </div>
         <div class="display">
-            <p>numbers here...</p>
+            <p id="display"></p>
         </div>
         <div class="calculator-buttons">
-            <button>(</button>
-            <button>)</button>
-            <button class="double-button">←</button>
+            <button class="default-button">(</button>
+            <button class="default-button">)</button>
+            <button id="clear-button">←</button>
 
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>÷</button>
+            <button class="default-button">7</button>
+            <button class="default-button">8</button>
+            <button class="default-button">9</button>
+            <button class="default-button">÷</button>
 
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>x</button>
+            <button class="default-button">4</button>
+            <button class="default-button">5</button>
+            <button class="default-button">6</button>
+            <button class="default-button">x</button>
 
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
+            <button class="default-button">1</button>
+            <button class="default-button">2</button>
+            <button class="default-button">3</button>
+            <button class="default-button">-</button>
 
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-            <button>+</button>
+            <button class="default-button">0</button>
+            <button class="default-button">.</button>
+            <button id="eval-button">=</button>
+            <button class="default-button">+</button>
         </div>
     </div>
 </body>
