--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
             <p id="display"></p>
         </div>
         <div class="calculator-buttons">
-            <button class="default-button">(</button>
-            <button class="default-button">)</button>
+            <button class="default-button" onclick="buttonClick('(')">(</button>
+            <button class="default-button" onclick="buttonClick(')')">)</button>
             <button id="clear-button">←</button>
 
-            <button class="default-button">7</button>
-            <button class="default-button">8</button>
-            <button class="default-button">9</button>
-            <button class="default-button">÷</button>
+            <button class="default-button" onclick="buttonClick(7)">7</button>
+            <button class="default-button" onclick="buttonClick(8)">8</button>
+            <button class="default-button" onclick="buttonClick(9)">9</button>
+            <button class="default-button" onclick="buttonClick('/')">÷</button>
 
-            <button class="default-button">4</button>
-            <button class="default-button">5</button>
-            <button class="default-button">6</button>
-            <button class="default-button">x</button>
+            <button class="default-button" onclick="buttonClick(4)">4</button>
+            <button class="default-button" onclick="buttonClick(5)">5</button>
+            <button class="default-button" onclick="buttonClick(6)">6</button>
+            <button class="default-button" onclick="buttonClick('*')">x</button>
 
-            <button class="default-button">1</button>
-            <button class="default-button">2</button>
-            <button class="default-button">3</button>
-            <button class="default-button">-</button>
+            <button class="default-button" onclick="buttonClick(1)">1</button>
+            <button class="default-button" onclick="buttonClick(2)">2</button>
+            <button class="default-button" onclick="buttonClick(3)">3</button>
+            <button class="default-button" onclick="buttonClick('-')">-</button>
 
-            <button class="default-button">0</button>
-            <button class="default-button">.</button>
+            <button class="default-button" onclick="buttonClick(0)">0</button>
+            <button class="default-button" onclick="buttonClick('.')">.</button>
             <button id="eval-button">=</button>
-            <button class="default-button">+</button>
+            <button class="default-button" onclick="buttonClick('+')">+</button>
         </div>
     </div>
 </body>
