Add previous display
Still TODO:
-Mobile view
-Text wrap if display text too long

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calculator">
         <div class="previous-display">
-            <p id="prev-dispay"></p>
+            <p id="prev-display"></p>
         </div>
         <div class="display">
             <p id="display"></p>
